Maui: update Setup pages
* Fix navigation
* Fix layout for mobile/tablet devices

--- a/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Info.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Info.plist
@@ -55,5 +55,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en-US</string>
 </dict>
 </plist>
