--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -52,6 +52,22 @@
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
+	  <CustomCommands>
+	    <CustomCommands>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>${SolutionDir}KeyCheck/bin/Release/net7.0/publish/KeyCheck ${SolutionDir}SimpleWeather.Shared/Keys</command>
+	      </Command>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>${SolutionDir}KeyCheck/bin/Release/net7.0/publish/KeyCheck ${SolutionDir}SimpleWeather.Weather-API/Keys</command>
+	      </Command>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>${SolutionDir}EditManifest/bin/Release/net7.0/publish/EditManifest ${ProjectDir}iOS/Info.plist "Release"</command>
+	      </Command>
+	    </CustomCommands>
+	  </CustomCommands>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-maccatalyst|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
@@ -108,7 +124,7 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.4" />
 		<PackageReference Include="Mapsui.Maui" Version="4.0.0-beta.8" />
-		<PackageReference Include="SimpleToolkit.Core" Version="2.0.3" />
+		<PackageReference Include="SimpleToolkit.Core" Version="2.0.6" />
 		<PackageReference Include="SimpleToolkit.SimpleShell" Version="2.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.4" />
 	</ItemGroup>
